--- a/sel-training-homework/sel-training-homework/sel-training-homework.csproj
+++ b/sel-training-homework/sel-training-homework/sel-training-homework.csproj
@@ -65,6 +65,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="LiteCartLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FirstTest.cs" />
   </ItemGroup>
