added test for homework8
Checks that each product on the litecart main page has exactly one
sticker

--- a/sel-training-homework/sel-training-homework/sel-training-homework.csproj
+++ b/sel-training-homework/sel-training-homework/sel-training-homework.csproj
@@ -65,6 +65,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="homework8.cs" />
     <Compile Include="homework7.cs" />
     <Compile Include="LiteCartLoginFFNightly.cs" />
     <Compile Include="LiteCartLoginFFESR45.cs" />
