--- a/sel-training-homework/sel-training-homework/sel-training-homework.csproj
+++ b/sel-training-homework/sel-training-homework/sel-training-homework.csproj
@@ -65,6 +65,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="homework10.cs" />
+    <Compile Include="homework9.cs" />
     <Compile Include="homework8.cs" />
     <Compile Include="homework7.cs" />
     <Compile Include="LiteCartLoginFFNightly.cs" />
