--- a/sel-training-homework/sel-training-homework/sel-training-homework.csproj
+++ b/sel-training-homework/sel-training-homework/sel-training-homework.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="homework10.cs" />
     <Compile Include="homework11.cs" />
+    <Compile Include="homework12.cs" />
     <Compile Include="homework9.cs" />
     <Compile Include="homework8.cs" />
     <Compile Include="homework7.cs" />
