--- a/sel-training-homework/sel-training-homework/sel-training-homework.csproj
+++ b/sel-training-homework/sel-training-homework/sel-training-homework.csproj
@@ -68,6 +68,7 @@
     <Compile Include="homework10.cs" />
     <Compile Include="homework11.cs" />
     <Compile Include="homework12.cs" />
+    <Compile Include="homework13.cs" />
     <Compile Include="homework9.cs" />
     <Compile Include="homework8.cs" />
     <Compile Include="homework7.cs" />
